--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <meta name="description" content="Introduction to Health Data Science">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/">
+  <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM516/">
 
   
 
@@ -48,7 +48,7 @@
   
   
   
-  <script src="/PM566/js/mathjax-config.js"></script>
+  <script src="/PM516/js/mathjax-config.js"></script>
   
 
   
@@ -207,7 +207,7 @@
   
   
   
-  <link rel="stylesheet" href="/PM566/css/academic.css">
+  <link rel="stylesheet" href="/PM516/css/academic.css">
 
   
 
@@ -223,14 +223,14 @@
   
 
   
-  <link rel="alternate" href="/PM566/index.xml" type="application/rss+xml" title="Introduction to Health Data Science - PM 566">
+  <link rel="alternate" href="/PM516/index.xml" type="application/rss+xml" title="Statistical Problem Solving - PM 516">
   
 
-  <link rel="manifest" href="/PM566/index.webmanifest">
-  <link rel="icon" type="image/png" href="/PM566/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png">
-  <link rel="apple-touch-icon" type="image/png" href="/PM566/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png">
+  <link rel="manifest" href="/PM516/index.webmanifest">
+  <link rel="icon" type="image/png" href="/PM516/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_32x32_fill_lanczos_center_3.png">
+  <link rel="apple-touch-icon" type="image/png" href="/PM516/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png">
 
-  <link rel="canonical" href="https://uscbiostats.github.io/PM566/">
+  <link rel="canonical" href="https://uscbiostats.github.io/PM516/">
 
   
   
