--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
 
 
   <link rel="shortcut icon" href="https://uscbiostats.github.io/PM566/favicon.ico" />
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://uscbiostats.github.io/PM566/img/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="https://uscbiostats.github.io/PM566/img/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="https://uscbiostats.github.io/PM566/img/favicon-16x16.png" sizes="16x16" />
-  <meta name="application-name" content="PM566: Introduction to Health Data Science - PM 566" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://uscbiostats.github.io/PM516/img/apple-touch-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="https://uscbiostats.github.io/PM516/img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://uscbiostats.github.io/PM516/img/favicon-16x16.png" sizes="16x16" />
+  <meta name="application-name" content="PM516: Statistical Problem Solving - PM 516" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="https://uscbiostats.github.io/PM566/img/mstile-144x144.png" />
+  <meta name="msapplication-TileImage" content="https://uscbiostats.github.io/PM516/img/mstile-144x144.png" />
 
 
   <title>Introduction to Health Data Science - PM 566</title>
