--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebSite","url": "https://uscbiostats.github.io/PM566/"
+  "@type": "WebSite","url": "https://uscbiostats.github.io/PM516/"
 }
 </script>
 
@@ -63,14 +63,14 @@
 {
   "@context": "https://schema.org",
   "@type": "Course",
-  "@id": "https://uscbiostats.github.io/PM566/",
-  "name": "Introduction to Health Data Science - PM 566",
+  "@id": "https://uscbiostats.github.io/PM516/",
+  "name": "Statistical Problem Solving - PM 516",
   "logo": "https://uscbiostats.github.io/PM566/images/icon_hu0b7a4cb9992c9ac0e91bd28ffd38dd00_9727_192x192_fill_lanczos_center_3.png",
   "image": "https://uscbiostats.github.io/PM566/img/social-image.png",
   
   
   
-  "url": "https://uscbiostats.github.io/PM566/"
+  "url": "https://uscbiostats.github.io/PM516/"
 }
 </script>
 
@@ -94,7 +94,7 @@
   <meta name="msapplication-TileImage" content="https://uscbiostats.github.io/PM516/img/mstile-144x144.png" />
 
 
-  <title>Introduction to Health Data Science - PM 566</title>
+  <title>Statistical Problem Solving - PM 516</title>
 
 </head>
 
